Fixed vertical align problem with div.preview_not_found

--- a/public/themes/fracture/stylesheets/application.css
+++ b/public/themes/fracture/stylesheets/application.css
@@ -25,7 +25,7 @@
 			ul.main_menu li a{padding:5px 12px 7px 12px;margin:0px 0px 0px 10px;text-align:center;text-shadow:1px 1px 4px black;font-size:18px;}
 			ul.main_menu li a:visited, ul.main_menu li a:link{color:#ccc;}
 			ul.main_menu li a:hover{color:white;}
-			ul.main_menu li a.selected{color:#333;text-shadow:1px 1px 0px #aaa;background:#ECECEC; -moz-border-radius-topleft:5px;-webkit-border-top-left-radius:5px; -moz-border-radius-topright:5px;-webkit-border-top-right-radius:5px}
+			ul.main_menu li a.selected{color:#333;text-shadow:0px 0px 0px #aaa;background:#ECECEC; -moz-border-radius-topleft:5px;-webkit-border-top-left-radius:5px; -moz-border-radius-topright:5px;-webkit-border-top-right-radius:5px}
 
 	/* Main Logo */ 
 	.main_logo{margin-bottom:12px;margin-left:0px;} /* .main_logo and .main_menu are in the same table, so their positions affect eachother */
@@ -65,8 +65,8 @@
 	
 /* Opal CSS */
 	/* Images */
-	img.thumbnail, div.preview_not_found{background:white;padding:3px;margin:3px;border:0px solid #aaa;opacity:0.80;filter:alpha(opacity=80);-moz-opacity:0.8;-khtml-opacity: 0.8; box-shadow: 0px 2px 5px #333;-moz-box-shadow: 0px 2px 5px #333;  -webkit-box-shadow: 0px 2px 5px #333;}
-	img.thumbnail:hover{;opacity:1.00;filter:alpha(opacity=100);-moz-opacity:1.0;-khtml-opacity: 1.0}
+	img.thumbnail, .preview_not_found{background:white;padding:3px;margin:3px;border:0px solid #aaa;opacity:0.80;filter:alpha(opacity=80);-moz-opacity:0.8;-khtml-opacity: 0.8; box-shadow: 0px 2px 5px #333;-moz-box-shadow: 0px 2px 5px #333;  -webkit-box-shadow: 0px 2px 5px #333;}
+	img.thumbnail:hover, .preview_not_found:hover {;opacity:1.00;filter:alpha(opacity=100);-moz-opacity:1.0;-khtml-opacity: 1.0}
 	img.pinky{border:0px solid #999;opacity:0.80;filter:alpha(opacity=80);-moz-opacity:0.8;-khtml-opacity: 0.8;}
 	img.pinky:hover{;opacity:1.00;filter:alpha(opacity=100);-moz-opacity:1.0;-khtml-opacity: 1.0}
 	img.selected{border:1px solid #aaa;background:url(../images/bgs/black_trans_05.png) repeat;padding:2px;opacity:1.00;filter:alpha(opacity=100);-moz-opacity:1.0;-khtml-opacity: 1.0;;-moz-border-radius: 3px;-webkit-border-radius: 3px;}
@@ -75,17 +75,12 @@
 	img.avatar_tiny, img.pinky{width:20px;height:20px;border:1px solid #666;vertical-align:middle;}
 	img.loading{margin:2px;background:#ccc;padding:5px;border:1px solid #666;;-moz-border-radius: 5px;-webkit-border-radius: 5px;}
 	
-
-
 	/* Items */
 	.item 
 		.item input.name, .item .name a, .item .name{font-size:24px;;text-align:left;}
-		.item .name a:visited, .item .name a:link{}
-		.item .name a:hover{}
-		.item .preview_not_found{;background:url(../images/preview.png) no-repeat center center;}
+		.item .preview_not_found a{width:180px;height:125px;background:url(../images/preview.png) no-repeat center center;}
 		.item .description{font-size:16px;;text-align:left;}
-		.item textarea.description{width:400px;height:100px;}
-		
+		.item textarea.description{width:400px;height:100px;}		
 		
 	/* Item Lists */
 	.item_box_simple{margin-bottom:15px;padding-bottom:15px;padding-left:5px;border-bottom:1px solid #ddd;}
